// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Topbar /> renders as closed correctly 1`] = `
Array [
  <div
    className="sc-ckVGcZ sc-jKJlTe fgbUEF"
  >
    <div
      className="sc-kkGfuU kRaBKJ"
    >
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={false}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={false}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className="sc-ckVGcZ sc-eNQAEJ iqKeeK"
  >
    <div
      className="sc-hMqMXs ibhGtN"
    >
      <nav
        className="sc-kgoBCf kVSTZj sc-kEYyzF gChjCE"
      >
        <ul
          className="sc-kGXeez hGmmTb"
        >
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/"
              onClick={[Function]}
            >
              Ten Blocks
            </a>
          </li>
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/about/"
              onClick={[Function]}
            >
              About
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
]
`;

exports[`<Topbar /> renders as hidden correctly 1`] = `
Array [
  <div
    className="sc-ckVGcZ sc-jKJlTe exVNjm"
  >
    <div
      className="sc-kkGfuU kRaBKJ"
    >
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={true}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={true}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className="sc-ckVGcZ sc-eNQAEJ eqnLup"
  >
    <div
      className="sc-hMqMXs ibhGtN"
    >
      <nav
        className="sc-kgoBCf kVSTZj sc-kEYyzF gChjCE"
      >
        <ul
          className="sc-kGXeez hGmmTb"
        >
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/"
              onClick={[Function]}
            >
              Ten Blocks
            </a>
          </li>
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/about/"
              onClick={[Function]}
            >
              About
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
]
`;

exports[`<Topbar /> renders correctly 1`] = `
Array [
  <div
    className="sc-ckVGcZ sc-jKJlTe fgbUEF"
  >
    <div
      className="sc-kkGfuU kRaBKJ"
    >
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={true}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
      <button
        className="sc-bdVaJa IrEnj"
        onClick={[Function]}
        open={true}
      >
        <svg
          className="sc-bwzfXH fKuZHR"
          viewBox="0 0 25 25"
        >
          <rect
            height="2"
            width="23"
            x="1"
            y="8"
          />
          <rect
            height="2"
            width="23"
            x="1"
            y="15"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className="sc-ckVGcZ sc-eNQAEJ iqKeeK"
  >
    <div
      className="sc-hMqMXs ibhGtN"
    >
      <nav
        className="sc-kgoBCf kVSTZj sc-kEYyzF gChjCE"
      >
        <ul
          className="sc-kGXeez hGmmTb"
        >
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/"
              onClick={[Function]}
            >
              Ten Blocks
            </a>
          </li>
          <li
            className="sc-kpOJdX hfUBhb"
          >
            <a
              className="sc-dxgOiQ khSuPP"
              href="/about/"
              onClick={[Function]}
            >
              About
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
]
`;
